--- a/app/src/main/res/layout/item_stepper.xml
+++ b/app/src/main/res/layout/item_stepper.xml
@@ -1,47 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
     <com.google.android.material.card.MaterialCardView
-            android:id="@+id/stepperImageCard"
-            android:layout_width="@dimen/width_48"
-            android:layout_height="@dimen/height_48"
-            tools:cardBackgroundColor="@color/green"
-            app:cardCornerRadius="@dimen/corner_radius_50"
-            android:elevation="0dp"
-            app:strokeWidth="@dimen/separator_height"
-            app:strokeColor="@color/blue"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+        android:id="@+id/stepperImageCard"
+        android:layout_width="@dimen/width_48"
+        android:layout_height="@dimen/height_48"
+        android:elevation="0dp"
+        app:cardCornerRadius="@dimen/corner_radius_50"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="@color/blue"
+        app:strokeWidth="@dimen/separator_height"
+        tools:cardBackgroundColor="@color/green">
 
         <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
 
             <ImageView
-                    android:id="@+id/stepperImage"
-                    android:layout_width="@dimen/width_14"
-                    android:layout_height="@dimen/height_14"
-                    tools:src="@drawable/ic_bike"
-                    tools:tint="@color/white"/>
+                android:id="@+id/stepperImage"
+                android:layout_width="@dimen/width_14"
+                android:layout_height="@dimen/height_14"
+                tools:src="@drawable/ic_bike"
+                tools:tint="@color/white" />
 
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
+    <TextView
+        android:id="@+id/infoStepTxt"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size_12"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/stepperImageCard"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toStartOf="@id/stepperImageCard"
+        app:layout_constraintTop_toBottomOf="@id/stepperImageCard"
+        tools:text="Pronto shgfuhgf" />
+
     <View
-            android:id="@+id/stepperConnector"
-            android:layout_width="@dimen/width_42"
-            android:layout_height="@dimen/separator_height"
-            android:background="@color/green"
-            app:layout_constraintTop_toTopOf="@id/stepperImageCard"
-            app:layout_constraintBottom_toBottomOf="@id/stepperImageCard"
-            app:layout_constraintStart_toEndOf="@id/stepperImageCard"
-            app:layout_constraintEnd_toEndOf="parent"/>
+        android:id="@+id/stepperConnector"
+        android:layout_width="@dimen/width_42"
+        android:layout_height="@dimen/separator_height"
+        android:background="@color/green"
+        app:layout_constraintBottom_toBottomOf="@id/stepperImageCard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/stepperImageCard"
+        app:layout_constraintTop_toTopOf="@id/stepperImageCard" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
