--- a/app/src/main/res/layout/layout_bike_action_stepper.xml
+++ b/app/src/main/res/layout/layout_bike_action_stepper.xml
@@ -12,7 +12,7 @@
         android:id="@+id/stepperContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
