ramonmluz - Adjust the test have been broken

--- a/app/src/main/res/layout/item_stepper.xml
+++ b/app/src/main/res/layout/item_stepper.xml
@@ -38,7 +38,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <TextView
-        android:id="@+id/infoStepTxt"
+        android:id="@+id/stepInfoTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
