--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -25,13 +26,15 @@
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
+                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:setTitle="@{viewModel.isEditableAvailable}"
-                app:navigationIcon="@drawable/ic_close_black"
                 android:background="@color/white"
-                app:titleTextColor="@color/black"
-                style="@style/Widget.MaterialComponents.Toolbar.Primary" />
+                app:navigationIcon="@drawable/ic_close_black"
+                app:setTitle="@{viewModel.isEditableAvailable}"
+                app:titleTextAppearance="@style/TextAppearanceToolbar"
+                app:titleTextColor="@color/dark_gray"
+                tools:title="@string/add_user_toolbar_title" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
@@ -53,8 +56,8 @@
             android:id="@+id/returnNavHostFragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/margin_large"
             android:layout_height="0dp"
+            android:layout_marginTop="@dimen/margin_large"
             app:defaultNavHost="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
