--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -67,4 +67,9 @@
         <item name="android:fontFamily">@font/roboto_medium</item>
     </style>
 
+    <style name="TextAppearanceToolbar" parent="@style/TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textSize">@dimen/text_size_18</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
