--- a/app/src/main/res/layout/fragment_user_form.xml
+++ b/app/src/main/res/layout/fragment_user_form.xml
@@ -235,6 +235,12 @@
                     app:layout_constraintTop_toBottomOf="@+id/tv_other_pictures_label" />
 
                 <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Escolha uma data"
+                    android:onClick="showDatePickerDialog" />
+
+                <Button
                     android:id="@+id/saveButton"
                     android:layout_width="0dp"
                     android:layout_height="60dp"
