--- a/app/src/main/res/layout/fragment_user_form.xml
+++ b/app/src/main/res/layout/fragment_user_form.xml
@@ -126,21 +126,19 @@
                     app:layout_constraintTop_toBottomOf="@+id/cet_user_name"
                     app:textValue="@={viewModel.userTelephone}" />
 
-                <app.igormatos.botaprarodar.common.components.CustomEditText
+                <app.igormatos.botaprarodar.common.components.CustomDatePicker
                     android:id="@+id/cet_user_birthday"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/margin_medium"
                     android:layout_marginTop="@dimen/margin_large"
                     android:hint="@string/user_form_user_birthday_hint"
-                    android:inputType="number"
                     android:label="@string/user_form_user_birthday_label"
                     app:errorMessage="@{`add_user_invalid_age`}"
                     app:layout_constraintEnd_toStartOf="@+id/cst_user_income"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/cet_user_phone"
-                    app:textCaptured="@{viewModel.userBirthday}"
-                    app:textValue="@={viewModel.userBirthday}" />
+                    app:textCaptured="@{viewModel.userBirthday}"/>
 
                 <app.igormatos.botaprarodar.common.components.CustomSelectText
                     android:id="@+id/cst_user_income"
@@ -233,12 +231,6 @@
                     app:imagePathOrUrl="@{viewModel.userImageProfile}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_other_pictures_label" />
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Escolha uma data"
-                    android:onClick="showDatePickerDialog" />
 
                 <Button
                     android:id="@+id/saveButton"
