--- a/app/src/main/res/layout/custom_date_picker.xml
+++ b/app/src/main/res/layout/custom_date_picker.xml
@@ -14,26 +14,28 @@
             tools:text="Texto qualquer" />
 
     <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textLayout"
-            style="@style/textInputLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_small"
-            app:hintAnimationEnabled="false"
-            app:hintEnabled="false"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent">
+        android:id="@+id/textLayout"
+        style="@style/textInputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_small"
+        android:orientation="vertical"
+        app:hintAnimationEnabled="false"
+        app:hintEnabled="false"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/editText"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/height_48"
-                android:inputType="textPersonName"
-                android:textColor="@color/text_gray"
-                android:textColorHint="@color/gray_3"
-                android:textSize="@dimen/text_size_14"
-                android:textStyle="bold"
-                tools:hint="Texto qualquer" />
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_48"
+            android:drawableEnd="@drawable/ic_today"
+            android:inputType="textPersonName"
+            android:textColor="@color/text_gray"
+            android:textColorHint="@color/gray_3"
+            android:textSize="@dimen/text_size_14"
+            android:textStyle="bold"
+            tools:hint="Texto qualquer" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
